# naylence-advanced-security-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/naylence/fame/expr/: __init__.py  ast.py  builtins.py  errors.py  evaluator.py  limits.py  parser.py  tokenizer.py
src/naylence/fame/security/: strict_overlay_security_profile.py
src/naylence/fame/security/auth/: policy_http_authorization_profile.py
src/naylence/fame/security/cert/: attachment_cert_validator.py  attachment_cert_validator_factory.py  ca_fastapi_router.py  ca_server.py  ca_service.py  certificate_client.py  default_ca_service.py  default_certificate_manager.py  default_certificate_manager_factory.py  fastapi_model.py  util.py
src/naylence/fame/security/encryption/: composite_encryption_manager.py  default_secure_channel_manager.py  default_secure_channel_manager_factory.py  encryption_manager_registry.py
src/naylence/fame/security/fastapi/: ca_signing_router.py
src/naylence/fame/security/keys/: x5c_key_manager.py  x5c_key_manager_factory.py
src/naylence/fame/stickiness/: aft_load_balancer_stickiness_manager_factory.py
tests/: __init__.py  security_test_helpers.py  test_ca_helpers.py
tests/naylence/: __init__.py
tests/naylence/fame/: __init__.py
tests/naylence/fame/expr/: __init__.py  test_builtins.py  test_evaluator.py  test_null_handling.py  test_parser.py  test_secure_hash.py  test_secure_hash_cross_language.py  test_tokenizer.py
tests/naylence/fame/security/: conftest.py  test_address_bind_ack_integration.py  test_address_bind_encryption_key.py  test_advanced_security_integration.py  test_attach_security_validation.py  test_auto_discovery_integration.py  test_ca_signing_router.py  test_channel_encryption.py  test_channel_encryption_integration.py  test_channel_encryption_manager_comprehensive.py  test_channel_encryption_manager_integration.py  test_channel_encryption_node_like.py  test_channel_handshake_failure_handling.py  test_channel_handshake_failure_handling_backup.py  test_complete_policy_driven_security.py  test_complete_signing_material_integration.py  test_comprehensive_algorithm_preferences.py  test_comprehensive_ca_chain_support.py  test_comprehensive_certificate_integration.py  test_comprehensive_coverage.py  test_debug_channel_encryption.py  test_default_node_security_manager_integration.py  test_edge_case_integration.py  test_edsa_optimization.py  test_encryption_algorithm_preferences.py  test_encryption_key_discovery.py  test_encryption_key_flow.py  test_encryption_key_flow_integration.py  test_encryption_manager_factory.py  test_encryption_toggle.py  test_end_to_end_certificate_workflow.py  test_end_to_end_key_flow.py  test_envelope_security_during_attachment.py  test_envelope_security_handler.py  test_factory_integration.py  test_final_integration.py  test_flexible_crypto_policy.py  test_forbidden_signature_policy.py  test_full_handshake_reply_to.py  test_jsonrpc_serialization.py  (+27 more)
tests/naylence/fame/security/auth/: test_policy_http_authorization_profile.py
tests/naylence/fame/security/cert/: __init__.py  conftest.py  test_attachment_certificate_integration.py  test_attachment_certificate_validation.py  test_attachment_e2e_certificate_validation.py  test_pki.py  (+33 more)
tests/naylence/fame/stickiness/: test_core_stickiness.py  test_end_to_end_integration.py  test_enhanced_stickiness.py  test_factory_stickiness_integration.py  test_key_provider_injection.py  test_keyrequest_routing_integration.py  test_manager_integration.py  test_node_event_listener_integration.py  test_refactored_stickiness.py  test_sid_only_mode.py
(+13 files in other folders)
